--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,4 +1,9 @@
 tasks:
+  - name: front-end
+    init: |
+      cd frontend-react-js
+      npm i
+      cd ..
   - name: aws-cli
     env:
       AWS_CLI_AUTO_PROMPT: on-partial
