--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,28 +35,28 @@ services:
       retries: 3
     volumes:
       - ./frontend-react-js:/frontend-react-js
-  xray-daemon:
-    image: "amazon/aws-xray-daemon"
-    environment:
-      AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
-      AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
-      AWS_REGION: "eu-west-1"
-    command:
-      - "xray -o -b xray-daemon:2000"
-    ports:
-      - 2000:2000/udp
-  dynamodb-local:
-      # https://stackoverflow.com/questions/67533058/persist-local-dynamodb-data-in-volumes-lack-permission-unable-to-open-databa
-      # We needed to add user:root to get this working.
-      user: root
-      command: "-jar DynamoDBLocal.jar -sharedDb -dbPath ./data"
-      image: "amazon/dynamodb-local:latest"
-      container_name: dynamodb-local
-      ports:
-        - "8000:8000"
-      volumes:
-        - "./docker/dynamodb:/home/dynamodblocal/data"
-      working_dir: /home/dynamodblocal
+  #xray-daemon:
+  #  image: "amazon/aws-xray-daemon"
+  #  environment:
+  #    AWS_ACCESS_KEY_ID: "${AWS_ACCESS_KEY_ID}"
+  #    AWS_SECRET_ACCESS_KEY: "${AWS_SECRET_ACCESS_KEY}"
+  #    AWS_REGION: "eu-west-1"
+  #  command:
+  #    - "xray -o -b xray-daemon:2000"
+  #  ports:
+   #   - 2000:2000/udp
+  #dynamodb-local:
+  #    # https://stackoverflow.com/questions/67533058/persist-local-dynamodb-data-in-volumes-lack-permission-unable-to-open-databa
+  #    # We needed to add user:root to get this working.
+  #    user: root
+  #    command: "-jar DynamoDBLocal.jar -sharedDb -dbPath ./data"
+  #    image: "amazon/dynamodb-local:latest"
+  #    container_name: dynamodb-local
+  #    ports:
+  #      - "8000:8000"
+  #    volumes:
+  #     - "./docker/dynamodb:/home/dynamodblocal/data"
+  #    working_dir: /home/dynamodblocal
   db:
       image: postgres:13-alpine
       restart: always
